--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "cd ../frontend && npm install && npm run build",
+  "build": "cd ../frontend && npm ci && npm run build",
     "start": "node index.js"
   },
   "dependencies": {
