--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "build": "cd ../frontend && npm ci && npm run build",
-    "start": "node index.js"
+    "build": "cd ../frontend && npm ci && npm run build",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,5 +14,8 @@
     "firebase-admin": "^13.4.0",
     "moment": "^2.29.4",
     "node-fetch": "^2.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
